# rust-login-frontend-advance

./: Cargo.toml  README.md  Trunk.toml  index.html  info-backend_setup
src/: contexts.rs  main.rs
src/api/: mod.rs  user.rs
src/components/: alert.rs  header.rs  input.rs  login_form.rs  menu.rs  mod.rs
src/pages/: home.rs  login.rs  not_found.rs
